<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.gajewski.chatapp.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingTop="80dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="40dp"
            android:background="@drawable/border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/host"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:hint="@string/prompt_host"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background_normal"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:paddingLeft="10dp"
                    android:paddingTop="7dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:textColor="#ff000000" />

                <EditText
                    android:id="@+id/port"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:hint="@string/prompt_port"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background_normal"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:paddingLeft="10dp"
                    android:paddingTop="7dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:textColor="#ff000000" />


            </LinearLayout>


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/log_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:drawable/editbox_background_normal"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingRight="10dp"
                android:paddingBottom="12dp"
                android:textStyle="italic"
                android:textColor="#ff000000" />

            <Button
                android:id="@+id/log_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/log_in"
                android:textStyle="bold"
                android:background="@android:drawable/dialog_holo_light_frame" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:alpha="1"
        android:scaleType="fitEnd"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignTop="@+id/relativeLayout"
        android:onClick="fill" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chatapp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>

